--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-
 click==6.7
 Flask==0.12.2
 gunicorn==19.7.1
 Pygments==2.2.0
 requests==2.18.4
-
+protobuf==3.15.8
+dialogflow==1.1.0
+pymessenger==0.0.7.0
