--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ Pygments==2.2.0
 requests==2.18.4
 protobuf==3.15.8
 dialogflow==1.1.0
-pymessenger==0.0.7.0
 pymongo==3.9.0
 dnspython==2.1.0
+pytest==6.2.4
+requests-toolbelt==0.9.1
+six==1.16.0
